--- a/info.yaml
+++ b/info.yaml
@@ -1,8 +1,8 @@
 title: "파일 매니저"
 version: "1.0.0"
 package_name: "flaskfilemanager"
-developer: "TEAM"
-description': "RichFilemanager를 Flask에서 동작하도록 한 FlaskFileManager 포크"
+developer: "stevelittlefish"
+description: "RichFilemanager를 Flask에서 동작하도록 한 FlaskFileManager 포크"
 home: "https://github.com/flaskfarm/flaskfilemanager"
 more: "https://raw.githubusercontent.com/flaskfarm/flaskfilemanager/main/README.md"
 
